# video-review

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.nas.yml  docker-compose.yml  pyproject.toml
app/: config.py  database.py  frame_worker.py  frames.py  main.py  operations.py  runtime.py  scanner.py  schemas.py
app/static/: manifest.json  sw.js
app/templates/: index.html  job_detail.html  jobs.html  settings.html
docs/: architecture.md  feature-list.md  file-operation-protocol.md  hermes-approval-closed-loop.md  hermes-integration.md  hermes-operation-executor.md  lucky-deployment.md  progress.md  release-process.md  review-workflow.md  safety-rules.md  screenshot-generation.md  technical-design.md  trash-retention-policy.md
docs/plans/: 2026-05-17-hermes-approval-closed-loop.md
resources/favicon/: site.webmanifest
scripts/: hermes-approve-operation.sh  hermes_gateway_integration_example.py  hermes_gateway_interceptor.py  hermes_operation_approval.py  hermes_operation_executor.py  hermes_operation_state.py  hermes_pending_operation_notify.py  hermes_pending_operation_watchdog.py  manual-deploy.sh
tests/: conftest.py  test_app.py  test_config.py  test_database.py  test_directory_browse.py  test_hermes_gateway_interceptor.py  test_hermes_operation_approval.py  test_hermes_operation_executor.py  test_hermes_operation_state.py  test_hermes_pending_operation_notify.py  test_operations.py  test_patch_item.py  test_path_safety.py  test_scan_api.py  test_scanner.py  test_web_forms.py
