[project]
name = "video-review"
version = "0.2.0"
description = "NAS video organization review service with screenshots, decisions, and safe execution planning."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
